grafana/tempo/generated/grafana-tempo/templates/metrics-generator/networkpolicy.yaml
---
# Source: grafana-tempo/templates/metrics-generator/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-metrics-generator
  namespace: "grafana-tempo"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana-tempo
    app.kubernetes.io/version: 2.5.0
    helm.sh/chart: grafana-tempo-3.7.4
    app.kubernetes.io/component: metrics-generator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: grafana-tempo
      app.kubernetes.io/component: metrics-generator
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 3200
        - port: 7946
        - port: 9095
